fixed navbar spacing issues

--- a/about/about.css
+++ b/about/about.css
@@ -5,7 +5,6 @@ html {
 body {
     overflow-x: hidden;
     position: relative;
-    height: 100vh;
     margin: 1vw;
     margin-right: 10vw;
     margin-left: 10vw;
@@ -24,9 +23,10 @@ body.fade-out {
     width: 100%;
 }
 
-.container-fluid {
+
+/* .container-fluid {
     align-items: center;
-}
+} */
 
 div {
     font-family: 'Open Sans', sans-serif;
