--- a/work/work.css
+++ b/work/work.css
@@ -5,7 +5,6 @@ html {
 body {
     overflow-x: hidden;
     position: relative;
-    height: 100vh;
     margin: 1vw;
     margin-right: 10vw;
     margin-left: 10vw;
